examples/errors/singletons1.lgt

% singleton variables in opening object directive
:- object(singletons(L)).

	% singleton variables in predicate clause
	predicate(A) :-
		write(C).
	
:- end_object.

